--- a/netlify.toml
+++ b/netlify.toml
@@ -1,4 +1,4 @@
 [build]
-  command = "next build && next start"
+  command = "npm run build"
   functions = "out_functions"
   publish = "out_publish"
