--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "bulma": "^0.9.3",
     "next": "11.0.0",
     "react": "17.0.2",
+    "react-cookie": "^4.0.3",
     "react-dom": "17.0.2",
     "react-transition-group": "^4.4.2",
     "sass": "^1.35.1"
