--- a/package.json
+++ b/package.json
@@ -8,12 +8,6 @@
     "start": "next start",
     "lint": "next lint"
   },
-  "jest": {
-    "testEnvironment": "jsdom",
-    "moduleNameMapper": {
-      "\\.(css|scss)$": "identity-obj-proxy"
-    }
-  },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.35",
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
@@ -28,12 +22,7 @@
     "sass": "^1.35.1"
   },
   "devDependencies": {
-    "@babel/preset-react": "^7.14.5",
-    "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^12.0.0",
-    "babel-jest": "^27.0.6",
     "eslint": "7.28.0",
-    "eslint-config-next": "11.0.0",
-    "jest": "^27.0.6"
+    "eslint-config-next": "11.0.0"
   }
 }
