--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,6 @@
+[dev]
+  functions = "netlify-functions"
+  functionsPort = 7000
 [build]
   command = "npm run build"
   functions = "out_functions"
