--- a/netlify.toml
+++ b/netlify.toml
@@ -3,5 +3,5 @@
   functionsPort = 9000
 [build]
   command = "npm run build"
-  functions = "out_functions"
-  publish = "out_publish"
+  functions = "lambda"
+  publish = "build"
