--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "next build && netlify-lambda build netlify/functions",
     "start": "next start",
     "lint": "next lint",
     "postinstall": "netlify-lambda install"
