--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-cookie": "^4.0.3",
     "react-dom": "17.0.2",
     "react-transition-group": "^4.4.2",
-    "sass": "^1.35.1"
+    "sass": "^1.35.1",
+    "url-slug": "^3.0.2"
   },
   "devDependencies": {
     "eslint": "7.28.0",
