--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-cookie": "^4.0.3",
     "react-dom": "17.0.2",
     "react-transition-group": "^4.4.2",
+    "recoil": "^0.3.1",
     "sass": "^1.35.1",
     "url-slug": "^3.0.2"
   },
