--- a/package.json
+++ b/package.json
@@ -13,11 +13,12 @@
     "@fortawesome/react-fontawesome": "^0.1.14",
     "@netlify/plugin-nextjs": "^3.7.0",
     "next": "11.0.0",
+    "querystringify": "^2.2.0",
     "react": "17.0.2",
     "react-cookie": "^4.0.3",
     "react-dom": "17.0.2",
     "react-transition-group": "^4.4.2",
-    "recoil": "^0.3.1",
+    "recoil": "^0.4.0",
     "sass": "^1.35.1",
     "url-slug": "^3.0.2"
   },
