--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "jazzmap",
   "version": "0.1.0",
   "scripts": {
-    "dev": "next dev",
+    "dev": "netlify dev -c next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
