--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "babel-loader": "^8.2.2",
     "eslint": "^7.28.0",
     "eslint-config-next": "^11.0.0",
-    "jest": "^27.0.6"
+    "jest": "^27.0.6",
+    "typescript": "^4.3.5"
   }
 }
