--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "eslint": "^7.28.0",
     "eslint-config-next": "^11.0.0",
     "jest": "^27.0.6",
+    "jest-css-modules-transform": "^4.3.0",
     "typescript": "^4.3.5"
   }
 }
