Adding package needed to build SSG page function. devDependency worked for local prod build.

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@testing-library/user-event": "^13.1.9",
     "babel-jest": "^27.0.6",
     "babel-loader": "^8.2.2",
+    "critters": "^0.0.10",
     "eslint": "^7.28.0",
     "eslint-config-next": "^11.0.0",
     "jest": "^27.0.6",
