--- a/package.json
+++ b/package.json
@@ -15,11 +15,11 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@fortawesome/react-fontawesome": "^0.1.14",
     "@netlify/plugin-nextjs": "^3.7.0",
-    "next": "11.0.0",
+    "next": "^11.1.0",
     "querystringify": "^2.2.0",
-    "react": "17.0.2",
+    "react": "^17.0.2",
     "react-cookie": "^4.0.3",
-    "react-dom": "17.0.2",
+    "react-dom": "^17.0.2",
     "react-transition-group": "^4.4.2",
     "recoil": "^0.4.0",
     "sass": "^1.35.1",
