--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "eslint-config-next": "^11.0.0",
     "jest": "^27.0.6",
     "jest-css-modules-transform": "^4.3.0",
+    "msw": "^0.35.0",
     "typescript": "^4.3.5"
   }
 }
