Transpiler config change. Allows Next to use new default of SWC, while Jest continues using Babel.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "jazzmap",
   "version": "0.1.0",
+  "babel": {
+    "presets": ["next/babel"]
+  },
   "scripts": {
     "dev": "netlify dev -c next dev",
     "build": "next build",
