Another attempt to fix missing webpack.

--- a/netlify.toml
+++ b/netlify.toml
@@ -10,6 +10,7 @@
 
 [functions]
   directory = "netlify/functions"
+  external_node_modules = ["node-fetch"]
 
 [[plugins]]
   package = "@netlify/plugin-functions-install-core"
