--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "inspect-test": "node --inspect node_modules/.bin/jest --runInBand ${1}"
   },
   "babel": {
-    "presets": ["next/babel"]
+    "presets": [
+      "next/babel"
+    ]
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
@@ -38,7 +40,7 @@
     "babel-jest": "^27.3.1",
     "babel-loader": "^8.2.3",
     "critters": "^0.0.14",
-    "eslint": "^8.1.0",
+    "eslint": "<8.0.0",
     "eslint-config-next": "^12.0.2",
     "jest": "^27.3.1",
     "jest-css-modules-transform": "^4.3.0",
