--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.16",
     "@netlify/plugin-nextjs": "^3.9.2",
+    "jest-environment-jsdom": "^28.1.3",
     "next": "^12.0",
     "querystringify": "^2.2.0",
     "react": "^17.0.2",
@@ -42,9 +43,9 @@
     "critters": "^0.0.14",
     "eslint": "<8.0.0",
     "eslint-config-next": "^12.0.2",
-    "jest": "^27.3.1",
+    "jest": "^28.0.0",
     "jest-css-modules-transform": "^4.3.0",
-    "msw": "^0.35.0",
+    "msw": "^0.41.0",
     "typescript": "^4.4.4"
   }
 }
